Addon website for documentation
Had fun spending some time making a nice documentation Website using
the dummy app. Then using the ember-cli-github-pages addon, push the
app to github pages! Lots of stuff in this commit, but all of it deals
with the documentation Website.

--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -3,23 +3,29 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Dummy</title>
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Ember Froala Editor Addon</title>
+    <meta name="description" content="An ember-cli addon that properly wraps the Froala WYSIWYG Editor for use in Ember.js">
 
-    {{content-for "head"}}
+    {{content-for 'head'}}
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/dummy.css">
 
-    {{content-for "head-footer"}}
+    {{content-for 'head-footer'}}
   </head>
   <body>
-    {{content-for "body"}}
+
+    <div id="app-loading" class="text-center">
+      <i class="fa fa-3x fa-circle-o-notch fa-spin"></i>
+      <div>Loading...</div>
+    </div>
+
+    {{content-for 'body'}}
 
     <script src="assets/vendor.js"></script>
     <script src="assets/dummy.js"></script>
 
-    {{content-for "body-footer"}}
+    {{content-for 'body-footer'}}
   </body>
 </html>
