Update ember and ember-cli to 2.9

--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -7,12 +7,12 @@
     <title>Ember Froala Editor Addon</title>
     <meta name="description" content="An ember-cli addon that properly wraps the Froala WYSIWYG Editor for use in Ember.js">
 
-    {{content-for 'head'}}
+    {{content-for "head"}}
 
-    <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/dummy.css">
+    <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
+    <link rel="stylesheet" href="{{rootURL}}assets/dummy.css">
 
-    {{content-for 'head-footer'}}
+    {{content-for "head-footer"}}
   </head>
   <body>
 
@@ -21,11 +21,11 @@
       <div>Loading...</div>
     </div>
 
-    {{content-for 'body'}}
+    {{content-for "body"}}
 
-    <script src="assets/vendor.js"></script>
-    <script src="assets/dummy.js"></script>
+    <script src="{{rootURL}}assets/vendor.js"></script>
+    <script src="{{rootURL}}assets/dummy.js"></script>
 
-    {{content-for 'body-footer'}}
+    {{content-for "body-footer"}}
   </body>
 </html>
