--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="h-100">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,11 +14,15 @@
 
     {{content-for "head-footer"}}
   </head>
-  <body>
+  <body class="h-100 m-print-0 p-print-0">
 
-    <div id="app-loading" class="text-center">
-      <i class="fa fa-3x fa-circle-o-notch fa-spin"></i>
-      <div>Loading...</div>
+    <div class="container h-100" id="app-loading">
+      <div class="row h-100 justify-content-center align-items-center">
+        <div class="card shadow-0"><div class="card-body text-center text-primary">
+          <i class="fa fa-5x fa-circle-o-notch fa-spin"></i>
+          <div class="fa-4x">Loading...</div>
+        </div></div>
+      </div>
     </div>
 
     {{content-for "body"}}
