--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html class="h-100">
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Dummy</title>
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ember Froala Editor Addon</title>
-    <meta name="description" content="An ember-cli addon that properly wraps the Froala WYSIWYG Editor for use in Ember.js">
 
     {{content-for "head"}}
 
@@ -14,17 +14,7 @@
 
     {{content-for "head-footer"}}
   </head>
-  <body class="h-100 m-print-0 p-print-0">
-
-    <div class="container h-100" id="app-loading">
-      <div class="row h-100 justify-content-center align-items-center">
-        <div class="card shadow-0"><div class="card-body text-center text-primary">
-          <i class="fa fa-5x fa-circle-o-notch fa-spin"></i>
-          <div class="fa-4x">Loading...</div>
-        </div></div>
-      </div>
-    </div>
-
+  <body>
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
